--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+
 lib64/
 parts/
 sdist/
@@ -35,6 +35,7 @@ venv.bak/
 sekai-env/
 .venv/
 .env/
+chroma-env/
 
 # =============================================================================
 # Embeddings & Vector Database
